# TBPS-CLIP

./: .gitignore  AGENTS.md  eval.py  main.py  pyproject.toml  sugarcrepe-pedes.py
config/: config.yaml  s.config.yaml
configs/: sugarcrepe_cuhk_pedes.yaml  sugarcrepe_icfg_pedes.yaml  sugarcrepe_rstpreid.yaml
misc/: build.py  utils.py
shell/: eval.sh  eval_cuhk_pedes.sh  eval_icfg_pedes.sh  eval_rstpreid.sh  train.sh
